# rules_go

./: BUILD.bazel  WORKSPACE
examples/buildless_external/: BUILD  main.go  main_test.go
examples/buildless_external/remotecgorepo/: call.c  call.go
go/: def.bzl  toolchains.rst
go/private/: go_repositories.bzl  repositories.bzl
go/private/actions/: archive.bzl  asm.bzl  compilepkg.bzl
go/private/rules/: aspect.bzl  cgo.bzl  gopackagesdriver_aspects.bzl  rule.bzl  test.bzl
go/tools/: BUILD.bazel
go/tools/bazel_testing/: bazel_testing.go  def.bzl
go/tools/builders/: cgo2.go  compilepkg.go  env.go
go/tools/gazelle/generator/: generator_test.go
go/tools/gazelle/rules/: generator.go  generator_test.go
go/tools/gazelle/testdata/repo/allcgolib/: foo.c  foo.go  foo_test.go
go/tools/gazelle/testdata/repo/cgolib/: foo.go  foo.h  foo_test.go  pure.go
go/tools/gopackagesdriver/: BUILD.bazel  gopackagesdriver.go  main.go
go/tools/gopackagesdriver-nonshim/: BUILD.bazel  bazel.go  main.go  querytool.bzl
go/tools/gopackagesdriver-nonshim/proto/: genproto.sh
go/tools/gopackagesdriver-nonshim/proto/build_event_stream/: BUILD.bazel  build_event_stream.pb.go
go/tools/gopackagesdriver-nonshim/proto/command_line/: BUILD.bazel  command_line.pb.go
go/tools/gopackagesdriver-nonshim/proto/invocation_policy/: BUILD.bazel
go/tools/gopackagesdriver-nonshim/proto/option_filters/: BUILD.bazel
go/tools/gopackagesdriver-nonshim/stdlibmaps/: BUILD.bazel  genfakestdlib.bzl  main.go
go/tools/gopackagesdriver/genfakestdlib/: BUILD.bazel  main.go
go/tools/gopackagesdriver/stdlibmaps/: BUILD.bazel  genfakestdlib.bzl  main.go
proto/: def.bzl  go_proto_library.bzl
tests/core/cgo/: BUILD.bazel  cgo_provider_test.bzl  dylib_client_doc.go
tests/core/dataargtest/: BUILD.bazel  dataargtest_test.go
tests/core/go_bazel_test/: BUILD.bazel  dataargtest_test.go
tests/core/gopackages/: BUILD.bazel  gopackages_test.go
