load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "gopackagesdriver",
    srcs = ["main.go"],
    visibility = ["//visibility:public"],
    data = [
        "//go/tools/gopackagesdriver-nonshim:querytool",
    ]
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
