load("@io_bazel_rules_go//go/tools/bazel_testing:def.bzl", "go_bazel_test")

go_bazel_test(
    name = "dataargtest_test",
    deps = [],
    srcs = ["dataargtest_test.go"],
    args = [
        "-binaryPath",
        "$(location //go/tools/fetch_repo:fetch_repo)",
    ],
    data = [
        "//go/tools/fetch_repo:fetch_repo",
    ],
)
