load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "genfakestdlib",
    srcs = ["main.go"],
    visibility = ["//visibility:private"],
)

load(":genfakestdlib.bzl", "gen_stdlib_maps")

gen_stdlib_maps(
    name = "stdlib_maps",
    out = "stdlib.go",
    visibility = ["//visibility:private"],
)

go_library(
    name = "go_default_library",
    srcs = ["stdlib.go"],
    importpath = "github.com/bazelbuild/rules_go/go/tools/gopackagesdriver/stdlibmaps",
    visibility = ["//go/tools/gopackagesdriver:__subpackages__"],
)
