load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["command_line.pb.go"],
    importpath = "github.com/bazelbuild/rules_go/go/tools/gopackagesdriver-nonshim/proto/command_line",
    visibility = ["//visibility:public"],
    deps = [
        "//go/tools/gopackagesdriver-nonshim/proto/option_filters:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
